<resources>
    <string name="app_name">EasyParkApp</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="login">Sign In Here</string>
    <string name="register">Sign Up</string>
    <string name="conpassword">Confirm Password</string>
    <string name="password">Password</string>
    <string name="number">Your Mobile Number</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="textcheck">Already Have an Account?</string>
    <string name="dashboard">EasyPark</string>
    <string name="maps">Map</string>
    <string name="parks">Nearby Parks</string>
    <string name="saved">Your Places</string>
    <string name="reserve">Reservations</string>
    <string name="gas">Nearby Gas Stations</string>
    <string name="shops">Nearby Shopping Malls</string>
    <string name="edit">Edit Details</string>
    <string name="setting">Settings</string>
    <string name="faq">Help Center</string>
    <string name="contact">Contact Us</string>
    <string name="items">08 items</string>
    <string name="event">Events</string>
    <string name="search">Search</string>
    <string name="logout">Sign out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="main_image">main image</string>
    <string name="mapsh">Maps</string>
    <string name="mapdes">Search Places through map</string>
    <string name="nearbypic">Nearby Parks</string>
    <string name="nearbyh">Nearby Parks</string>
    <string name="nearbydes">Show Paking Places nearby</string>
    <string name="yourplacepic">Saved Places</string>
    <string name="yourplaceh">Your Places</string>
    <string name="yourplacedes">Access locations that you saved</string>
    <string name="reservationpic">Reservation</string>
    <string name="reservationh">Reservation</string>
    <string name="reservationdes">Online booking parking spots</string>
    <string name="profilepic">Reservation</string>
    <string name="profileh">Welcome!</string>
    <string name="profiledes">Edit your profile details</string>
    <string name="title_activity_maps">Map</string>
</resources>
